// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp Tests should render and match with the snapshot 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    addCategory={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`GifExpertApp Tests should show a list of categories 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    addCategory={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="fail"
      key="fail"
    />
    <GifGrid
      category="paint"
      key="paint"
    />
  </ol>
</div>
`;
